--- a/rules.html
+++ b/rules.html
@@ -44,7 +44,7 @@
         }
 
         .points-list li strong:first-child {
-            flex: 0 0 100px; /* Adjust width as needed */
+            flex: 0 0 90px; /* Adjust width as needed */
             text-align: right;
             margin-right: 10px;
         }
@@ -75,17 +75,17 @@
             <li class="section">
                 <strong>Knockout Stage Predictions:</strong>
                 <ul>
-                    <li><strong>R16:</strong> 20 points for correctly predicting the winner of a match. (Qualified teams to QF)</li>
-                    <li><strong>QF:</strong> 40 points for correctly predicting the winner of a match. (Qualified teams to SF)</li>
-                    <li><strong>SF:</strong> 60 points for correctly predicting the winner of a match. (Qualified teams to F)</li>
-                    <li><strong>F:</strong> 80 points for correctly predicting the winner of the final match. (Champion)</li>
+                    <li><strong>R16:</strong> 20 points for correctly predicting the qualified teams to QF</li>
+                    <li><strong>QF:</strong> 40 points for correctly predicting the qualified teams to SF</li>
+                    <li><strong>SF:</strong> 60 points for correctly predicting the qualified teams to F</li>
+                    <li><strong>F:</strong> 80 points for correctly predicting the Champions</li>
                 </ul>
             </li>
             <li class="section">
                 <strong>Top Players Predictions:</strong>
                 <ul>
                     <li><strong>80 points:</strong> for correctly predicting the Top Goal Scorer.</li>
-                    <li><strong>80 points:</strong> for correctly predicting the Top Goal GoalKeeper.</li>
+                    <li><strong>80 points:</strong> for correctly predicting the Best Player.</li>
                 </ul>
             </li>
         </ul>
