--- a/rankings.html
+++ b/rankings.html
@@ -76,6 +76,7 @@
 <body>
     <div class="menu-container">
         <ul class="menu">
+            <li><a href="./rankings.html">Rankings</a></li>
             <li><a href="./actual_results_comparison.html">Euro2024 Results</a></li>
             <li><a href="./group_stage_result.html">Game by Game Points</a></li>
             <li><a href="./participants_comparison.html">Player vs Player</a></li>
