--- a/actual_results_comparison.html
+++ b/actual_results_comparison.html
@@ -79,10 +79,31 @@
             width: calc(100% / 4);
             /* Adjust the number 4 based on the actual number of columns */
         }
+        .menu-container {
+            display: flex;
+            justify-content: flex-end;
+            margin-bottom: 20px;
+        }
+
+        .menu {
+            list-style-type: none;
+            padding: 0;
+        }
     </style>
 </head>
 
 <body>
+    <div class="menu-container">
+        <ul class="menu">
+            <li><a href="./rankings.html">Rankings</a></li>
+            <li><a href="./actual_results_comparison.html">Euro2024 Results</a></li>
+            <li><a href="./group_stage_result.html">Game by Game Points</a></li>
+            <li><a href="./participants_comparison.html">Player vs Player</a></li>
+            <li><a href="./download_pdf.html">Download All Predictions</a></li>
+            <li><a href="./prediction_form.html">Prediction Form</a></li>
+            <li><a href="./rules.html">Points System</a></li>
+        </ul>
+    </div>
     <div class="logo-container">
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:200px;">
     </div>
