--- a/update_scores.html
+++ b/update_scores.html
@@ -43,6 +43,16 @@
             list-style-type: none;
             padding: 0;
         }
+        .menu li {
+            display: inline;
+            margin-left: 20px;
+        }
+
+        .menu li a {
+            color: #7c7a7a;
+            text-decoration: none;
+            font-weight: bold;
+        }
     </style>
 </head>
 
