--- a/prediction_form.html
+++ b/prediction_form.html
@@ -1571,7 +1571,7 @@
 
             csvContent += "Top Players\n";
             csvContent += `Top Goalscorer,${predictions.additional.topGoalscorer}\n`;
-            csvContent += `Best Goalkeeper,${predictions.additional.bestGoalkeeper}\n`;
+            csvContent += `Best Goalkeeper (LEAVE BLANK),${predictions.additional.bestGoalkeeper}\n`;
             csvContent += `Player of Tournament,${predictions.additional.MVP}\n`;
             csvContent += `Participant Name,${predictions.additional.participantName}\n`;
 
