--- a/prediction_form.html
+++ b/prediction_form.html
@@ -1035,6 +1035,10 @@
             <label for="topGoalscorer">Top Goalscorer:</label>
             <input type="text" id="topGoalscorer">
         </div>
+        <div>
+            <label for="bestGoalkeeper">(LEAVE BLANK):</label>
+            <input type="text" id="bestGoalkeeper">
+        </div>
     </div>
     <hr>
     <div class="form-container">
