--- a/rules.html
+++ b/rules.html
@@ -52,17 +52,17 @@
         <h2>Group Stage Predictions:</h2>
         <ul>
             <li>10 points: If the exact scoreline is predicted</li>
-            <li>8 points: If the predicted match outcome (only win or loss) and GD match the actual result, even if the exact scores do not.</li>
+            <li>8 points: If the predicted match outcome (only win or loss) and GD match the actual result, even if the exact scores do not match.</li>
             <li>5 points: If the predicted result is a draw, and the actual result is also a draw, regardless of the exact score.</li>
             <li>5 points: If the predicted match outcome (win or loss) is correct, but the exact scores or goal difference are incorrect.</li>
             <li>0 points: If none of the above conditions are met.</li>
         </ul>
         <h2>Knockout Stage Predictions:</h2>
         <ul>
-            <li>R16: 20 points for correctly predicting the qualified teams to QF</li>
-            <li>QF: 40 points for correctly predicting the qualified teams to SF</li>
-            <li>SF: 60 points for correctly predicting the qualified teams to F</li>
-            <li>F: 80 points for correctly predicting the Champions</li>
+            <li>20 points: for any correctly predicted qualified team to QF</li>
+            <li>40 points: for any correctly predicted qualified team to SF</li>
+            <li>60 points: for any correctly predicted qualified team to F</li>
+            <li>80 points: for correctly predicted Champions</li>
         </ul>
         <h2>Top Players Predictions:</h2>
         <ul>
