--- a/rules.html
+++ b/rules.html
@@ -59,9 +59,9 @@
         </ul>
         <h2>Knockout Stage Predictions:</h2>
         <ul>
-            <li>20 points: for any correctly predicted qualified team to QF</li>
-            <li>40 points: for any correctly predicted qualified team to SF</li>
-            <li>60 points: for any correctly predicted qualified team to F</li>
+            <li>20 points: for each correctly predicted qualified team to QF</li>
+            <li>40 points: for each correctly predicted qualified team to SF</li>
+            <li>60 points: for each correctly predicted qualified team to F</li>
             <li>80 points: for correctly predicted Champions</li>
         </ul>
         <h2>Top Players Predictions:</h2>
