--- a/rankings.html
+++ b/rankings.html
@@ -21,7 +21,7 @@
 
         .menu-container {
             display: flex;
-            justify-content: flex-end;
+            justify-content: center;
             margin-bottom: 20px;
         }
 
