--- a/participants_comparison.html
+++ b/participants_comparison.html
@@ -68,7 +68,7 @@
         }
         .menu-container {
             display: flex;
-            justify-content: flex-end;
+            justify-content: center;
             margin-bottom: 20px;
         }
 
