--- a/update_scores.html
+++ b/update_scores.html
@@ -35,7 +35,7 @@
         }
         .menu-container {
             display: flex;
-            justify-content: flex-end;
+            justify-content: center;
             margin-bottom: 20px;
         }
 
