--- a/rankings.html
+++ b/rankings.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="./logos/favicon.png">
+    <link rel="icon" type="image/png" href="./logos/favicon.jpg">
     <title>Euro2024 - Rankings</title>
     <style>
         body {
