--- a/actual_results_comparison.html
+++ b/actual_results_comparison.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./logos/favicon.png">
     <title>Participant Results vs. Euro2024 Results</title>
     <style>
         body {
