--- a/download_pdf.html
+++ b/download_pdf.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="./logos/favicon.jpg">
+    <link rel="icon" type="image/png" href="./logos/favicon.png">
     <title>Download All Participants Predictions</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <style>
