--- a/rankings.html
+++ b/rankings.html
@@ -154,11 +154,11 @@
 
                 let tableHTML = `<h2>${description}</h2>`;
                 tableHTML += '<table>';
-                tableHTML += '<tr><th>Participant</th><th>Score</th></tr>';
+                tableHTML += '<tr><th>Rank</th><th>Participant</th><th>Score</th></tr>';
 
-                for (const data of scoresData) {
-                    tableHTML += `<tr><td>${data.name}</td><td>${data.score}</td></tr>`;
-                }
+                scoresData.forEach((data, index) => {
+                    tableHTML += `<tr><td>${index + 1}</td><td>${data.name}</td><td>${data.score}</td></tr>`;
+                });
 
                 tableHTML += '</table>';
 
