--- a/test.html
+++ b/test.html
@@ -188,7 +188,16 @@
 
         function saveTableAsJPG() {
             const tableContainer = document.getElementById('scoresTableContainer');
-            html2canvas(tableContainer).then(canvas => {
+            const rect = tableContainer.getBoundingClientRect();
+            
+            html2canvas(tableContainer, {
+                x: rect.left,
+                y: rect.top,
+                width: rect.width,
+                height: rect.height,
+                scrollX: -window.scrollX,
+                scrollY: -window.scrollY,
+            }).then(canvas => {
                 const link = document.createElement('a');
                 link.download = 'table.jpg';
                 link.href = canvas.toDataURL('image/jpeg');
