--- a/test.html
+++ b/test.html
@@ -78,8 +78,8 @@
         }
 
         .save-button {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #ffffff;
+            color: #000000;
             padding: 10px 20px;
             border: none;
             cursor: pointer;
