--- a/gbyg.html
+++ b/gbyg.html
@@ -112,11 +112,11 @@
     <div class="menu-container">
         <ul class="menu">
             <li><a href="./rankings.html">Rankings</a></li>
-            <li><a href="./actual_results_comparison.html">Euro2024 Results</a></li>
-            <li><a href="./group_stage_result.html">Game by Game Points</a></li>
-            <li><a href="./participants_comparison.html">Player vs Player</a></li>
-            <li><a href="./download_pdf.html">Download All Predictions</a></li>
-            <li><a href="./prediction_form.html">Prediction Form</a></li>
+            <li><a href="./comp_euros.html">Euro2024 Results</a></li>
+            <li><a href="./gbyg.html">Game by Game Points</a></li>
+            <li><a href="./pvp.html">Player vs Player</a></li>
+            <li><a href="./dl_pdf.html">Download All Predictions</a></li>
+            <li><a href="./predict.html">Prediction Form</a></li>
             <li><a href="./rules.html">Points System</a></li>
         </ul>
     </div>
