--- a/table_jpg.html
+++ b/table_jpg.html
@@ -95,7 +95,7 @@
             <li><a href="./comp_euros.html">Euro2024 Results</a></li>
             <li><a href="./dl_pdf.html">Game by Game Points</a></li>
             <li><a href="./pvp.html">Player vs Player</a></li>
-            <li><a href="./download_pdf.html">Download All Predictions</a></li>
+            <li><a href="./dl_pdf.html">Download All Predictions</a></li>
             <li><a href="./predict.html">Prediction Form</a></li>
             <li><a href="./rules.html">Points System</a></li>
         </ul>
