--- a/rankings.html
+++ b/rankings.html
@@ -168,6 +168,9 @@
             }
         }
     </script>
+    <div class="footnote">
+        &copy; 2024. Website created by Nima N.
+    </div>
 </body>
 
 </html>
