--- a/dl_pdf.html
+++ b/dl_pdf.html
@@ -181,6 +181,9 @@
             reader.readAsDataURL(logoBlob);
         }
     </script>
+    <div class="footnote">
+        &copy; 2024. Website created by Nima N.
+    </div>
 </body>
 
 </html>
