--- a/pvp.html
+++ b/pvp.html
@@ -249,6 +249,9 @@
                 .catch(error => console.error('Error loading participants list:', error));
         };
     </script>
+    <div class="footnote">
+        &copy; 2024. Website created by Nima N.
+    </div>
 </body>
 
 </html>
