--- a/rules.html
+++ b/rules.html
@@ -71,5 +71,8 @@
             <li>80 points: for correctly predicting the Best Player.</li>
         </ul>
     </div>
+    <div class="footnote">
+        &copy; 2024. Website created by Nima N.
+    </div>
 </body>
 </html>
