--- a/table_jpg.html
+++ b/table_jpg.html
@@ -196,6 +196,9 @@
             });
         }
     </script>
+    <div class="footnote">
+        &copy; 2024. Website created by Nima N.
+    </div>
 </body>
 
 </html>
