--- a/update_scores.html
+++ b/update_scores.html
@@ -511,6 +511,9 @@
             document.body.removeChild(link);
         }
     </script>
+    <div class="footnote">
+        &copy; 2024. Website created by Nima N.
+    </div>
 </body>
 
 </html>
