--- a/comp_euros.html
+++ b/comp_euros.html
@@ -255,6 +255,9 @@
                 .catch(error => console.error('Error loading participants list:', error));
         };
     </script>
+    <div class="footnote">
+        &copy; 2024. Website created by Nima N.
+    </div>
 </body>
 
 </html>
