--- a/gbyg.html
+++ b/gbyg.html
@@ -328,6 +328,9 @@
             }
         }
     </script>
+    <div class="footnote">
+        &copy; 2024. Website created by Nima N.
+    </div>
 </body>
 
 </html>
