--- a/predict.html
+++ b/predict.html
@@ -1588,6 +1588,9 @@
         }
 
     </script>
+    <div class="footnote">
+        &copy; 2024. Website created by Nima N.
+    </div>
 </body>
 
 </html>
