--- a/rankings.html
+++ b/rankings.html
@@ -71,6 +71,14 @@
             padding: 10px;
             text-align: center;
         }
+        .footnote {
+            text-align: center;
+            font-size: 0.8em;
+            margin-top: 20px;
+            border-top: 1px solid #ccc;
+            padding-top: 10px;
+            color: #666;
+        }
     </style>
 </head>
 
