--- a/comp_euros.html
+++ b/comp_euros.html
@@ -101,6 +101,17 @@
             width: calc(100% / 4);
             /* Adjust the number 4 based on the actual number of columns */
         }
+        .footnote {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            font-size: 0.8em;
+            color: #484747;
+            background-color: 1e1e1e;
+            padding: 5px;
+            border-radius: 3px;
+            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+        }
     </style>
 </head>
 
