--- a/table_jpg.html
+++ b/table_jpg.html
@@ -85,6 +85,17 @@
             cursor: pointer;
             font-size: 16px;
         }
+        .footnote {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            font-size: 0.8em;
+            color: #484747;
+            background-color: 1e1e1e;
+            padding: 5px;
+            border-radius: 3px;
+            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+        }
     </style>
 </head>
 
