--- a/predict.html
+++ b/predict.html
@@ -92,6 +92,19 @@
             margin-bottom: 20px;
         }
 
+        button {
+            background-color: rgb(88, 87, 87);
+            color: black;
+            padding: 5px 5px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border: none;
+        }
+
         .logo-container {
             display: flex;
             justify-content: center;
