--- a/dl_pdf.html
+++ b/dl_pdf.html
@@ -27,16 +27,16 @@
         }
 
         button {
-            background-color: white;
+            background-color: rgb(88, 87, 87);
             color: black;
-            padding: 15px 32px;
+            padding: 5px 5px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
             font-size: 16px;
             margin: 4px 2px;
             cursor: pointer;
-            border: 2px solid black;
+            border: none;
         }
         .menu-container {
             display: flex;
