--- a/table_jpg.html
+++ b/table_jpg.html
@@ -77,13 +77,17 @@
             margin-top: 20px;
         }
 
-        .save-button {
-            background-color: #ffffff;
-            color: #000000;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
+        button {
+            background-color: rgb(88, 87, 87);
+            color: black;
+            padding: 5px 5px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
             font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border: none;
         }
         .footnote {
             position: fixed;
