--- a/test.html
+++ b/test.html
@@ -119,13 +119,16 @@
         }
 
         .capture-button {
-            display: block;
-            margin: 20px auto;
-            padding: 10px 20px;
-            background-color: white;
+            background-color: rgb(88, 87, 87);
             color: black;
-            border: 1px solid #444444;
+            padding: 5px 5px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
             cursor: pointer;
+            border: none;
         }
     </style>
 </head>
