--- a/update_scores.html
+++ b/update_scores.html
@@ -26,13 +26,16 @@
         }
 
         button {
-            background-color: #fff;
-            color: #000;
-            padding: 10px 20px;
-            margin-top: 10px;
-            border: 1px solid #444444;
+            background-color: rgb(88, 87, 87);
+            color: black;
+            padding: 5px 5px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
             cursor: pointer;
-            height: 36px;
+            border: none;
         }
         .menu-container {
             display: flex;
