--- a/gbyg.html
+++ b/gbyg.html
@@ -105,6 +105,7 @@
             font-weight: bold;
             text-align: center;
         }
+
         .footnote {
             position: fixed;
             bottom: 10px;
@@ -114,7 +115,7 @@
             background-color: 1e1e1e;
             padding: 5px;
             border-radius: 3px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
