--- a/pvp.html
+++ b/pvp.html
@@ -46,11 +46,13 @@
         .comparison-container {
             display: flex;
             justify-content: space-between;
-            gap: 10px; /* Adjust gap between participant containers */
+            gap: 10px;
+            /* Adjust gap between participant containers */
         }
 
         .participant-container {
-            flex: 1; /* Make each participant container take equal space */
+            flex: 1;
+            /* Make each participant container take equal space */
         }
 
         .logo-container {
@@ -67,6 +69,7 @@
             vertical-align: middle;
             margin-right: 5px;
         }
+
         .menu-container {
             display: flex;
             justify-content: center;
@@ -77,6 +80,7 @@
             list-style-type: none;
             padding: 0;
         }
+
         .menu li {
             display: inline;
             margin-left: 20px;
@@ -87,6 +91,7 @@
             text-decoration: none;
             font-weight: bold;
         }
+
         .footnote {
             position: fixed;
             bottom: 10px;
@@ -96,7 +101,7 @@
             background-color: 1e1e1e;
             padding: 5px;
             border-radius: 3px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
