--- a/rankings.html
+++ b/rankings.html
@@ -63,14 +63,18 @@
             width: 50%;
         }
 
-        table, th, td {
+        table,
+        th,
+        td {
             border: 1px solid #7c7a7a;
         }
 
-        th, td {
+        th,
+        td {
             padding: 10px;
             text-align: center;
         }
+
         .footnote {
             text-align: center;
             font-size: 0.8em;
@@ -79,6 +83,7 @@
             padding-top: 10px;
             color: #666;
         }
+
         .footnote {
             position: fixed;
             bottom: 10px;
@@ -88,7 +93,7 @@
             background-color: 1e1e1e;
             padding: 5px;
             border-radius: 3px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
