--- a/table_jpg.html
+++ b/table_jpg.html
@@ -63,11 +63,14 @@
             width: 50%;
         }
 
-        table, th, td {
+        table,
+        th,
+        td {
             border: 1px solid #7c7a7a;
         }
 
-        th, td {
+        th,
+        td {
             padding: 10px;
             text-align: center;
         }
@@ -89,6 +92,7 @@
             cursor: pointer;
             border: none;
         }
+
         .footnote {
             position: fixed;
             bottom: 10px;
@@ -98,7 +102,7 @@
             background-color: 1e1e1e;
             padding: 5px;
             border-radius: 3px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
