--- a/update_scores.html
+++ b/update_scores.html
@@ -37,6 +37,7 @@
             cursor: pointer;
             border: none;
         }
+
         .menu-container {
             display: flex;
             justify-content: center;
@@ -47,6 +48,7 @@
             list-style-type: none;
             padding: 0;
         }
+
         .menu li {
             display: inline;
             margin-left: 20px;
@@ -57,6 +59,7 @@
             text-decoration: none;
             font-weight: bold;
         }
+
         .footnote {
             position: fixed;
             bottom: 10px;
@@ -66,7 +69,7 @@
             background-color: 1e1e1e;
             padding: 5px;
             border-radius: 3px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
