--- a/comp_euros.html
+++ b/comp_euros.html
@@ -12,7 +12,8 @@
             margin: 10px;
             background-color: #1e1e1e;
             color: #7c7a7a;
-            font-size: 12px; /* Adjust the base font size */
+            font-size: 12px;
+            /* Adjust the base font size */
         }
 
         .menu-container {
@@ -25,6 +26,7 @@
             list-style-type: none;
             padding: 0;
         }
+
         .menu li {
             display: inline;
             margin-left: 20px;
@@ -41,12 +43,14 @@
             border-collapse: collapse;
             border: none;
             margin-bottom: 10px;
-            font-size: 12px; /* Adjust the table font size */
+            font-size: 12px;
+            /* Adjust the table font size */
         }
 
         th,
         td {
-            border: none; /* Ensure table cells have no borders */
+            border: none;
+            /* Ensure table cells have no borders */
             padding: 5px;
             text-align: left;
         }
@@ -60,7 +64,8 @@
             background-color: #6b6a6a;
             color: #fff;
             border: 1px solid #444444;
-            font-size: 12px; /* Adjust the select font size */
+            font-size: 12px;
+            /* Adjust the select font size */
         }
 
         .comparison-container {
@@ -101,6 +106,7 @@
             width: calc(100% / 4);
             /* Adjust the number 4 based on the actual number of columns */
         }
+
         .footnote {
             position: fixed;
             bottom: 10px;
@@ -110,7 +116,7 @@
             background-color: 1e1e1e;
             padding: 5px;
             border-radius: 3px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
