--- a/dl_pdf.html
+++ b/dl_pdf.html
@@ -38,6 +38,7 @@
             cursor: pointer;
             border: none;
         }
+
         .menu-container {
             display: flex;
             justify-content: center;
@@ -48,6 +49,7 @@
             list-style-type: none;
             padding: 0;
         }
+
         .menu li {
             display: inline;
             margin-left: 20px;
@@ -58,6 +60,7 @@
             text-decoration: none;
             font-weight: bold;
         }
+
         .footnote {
             position: fixed;
             bottom: 10px;
@@ -67,7 +70,7 @@
             background-color: 1e1e1e;
             padding: 5px;
             border-radius: 3px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
