--- a/predict.html
+++ b/predict.html
@@ -127,6 +127,7 @@
         .form-container label {
             width: 150px;
         }
+
         .footnote {
             position: fixed;
             bottom: 10px;
@@ -136,7 +137,7 @@
             background-color: 1e1e1e;
             padding: 5px;
             border-radius: 3px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
