--- a/rules.html
+++ b/rules.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,6 +43,7 @@
         ul li {
             margin-bottom: 10px;
         }
+
         .footnote {
             position: fixed;
             bottom: 10px;
@@ -51,10 +53,11 @@
             background-color: 1e1e1e;
             padding: 5px;
             border-radius: 3px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
+
 <body>
     <div class="logo-container">
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:300px;">
@@ -64,9 +67,12 @@
         <h2>Group Stage Predictions:</h2>
         <ul>
             <li>10 points: If the exact scoreline is predicted</li>
-            <li>8 points: If the predicted match outcome (only win or loss) and GD match the actual result, even if the exact scores do not match.</li>
-            <li>5 points: If the predicted result is a draw, and the actual result is also a draw, regardless of the exact score.</li>
-            <li>5 points: If the predicted match outcome (win or loss) is correct, but the exact scores or goal difference are incorrect.</li>
+            <li>8 points: If the predicted match outcome (only win or loss) and GD match the actual result, even if the
+                exact scores do not match.</li>
+            <li>5 points: If the predicted result is a draw, and the actual result is also a draw, regardless of the
+                exact score.</li>
+            <li>5 points: If the predicted match outcome (win or loss) is correct, but the exact scores or goal
+                difference are incorrect.</li>
             <li>0 points: If none of the above conditions are met.</li>
         </ul>
         <h2>Knockout Stage Predictions:</h2>
@@ -86,4 +92,5 @@
         &copy; 2024. Website created by Nima N.
     </div>
 </body>
+
 </html>
