--- a/test.html
+++ b/test.html
@@ -358,7 +358,7 @@
 
         async function captureScreenshot() {
             const element = document.getElementById('results-container');
-            const canvas = await html2canvas(element);
+            const canvas = await html2canvas(element, { allowTaint: true, useCORS: true });
             const imgData = canvas.toDataURL('image/jpeg');
             const link = document.createElement('a');
             link.href = imgData;
