--- a/comp_euros.html
+++ b/comp_euros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./logos/favicon.png">
-    <title>Participant Results vs. Euro2024 Results</title>
+    <title>Euro2024 Results vs. Predictions</title>
     <style>
         body {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -130,13 +130,13 @@
             <li><a href="./pvp.html">Player vs Player</a></li>
             <li><a href="./dl_pdf.html">Download All Predictions</a></li>
             <li><a href="./predict.html">Prediction Form</a></li>
-            <li><a href="./rules.html">Points System</a></li>
+            <li><a href="./psys.html">Points System</a></li>
         </ul>
     </div>
     <div class="logo-container">
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:300px;">
     </div>
-    <h1>Participant Results vs. Euro2024 Results</h1>
+    <h1>Euro2024 Results vs. Predictions</h1>
     <div class="comparison-container">
         <div class="table-container">
             <h2>Actual Results</h2>
