--- a/dl_pdf.html
+++ b/dl_pdf.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./logos/favicon.png">
-    <title>Download All Participants Predictions</title>
+    <title>All Predictions</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <style>
         body {
@@ -84,14 +84,14 @@
             <li><a href="./pvp.html">Player vs Player</a></li>
             <li><a href="./dl_pdf.html">Download All Predictions</a></li>
             <li><a href="./predict.html">Prediction Form</a></li>
-            <li><a href="./rules.html">Points System</a></li>
+            <li><a href="./psys.html">Points System</a></li>
         </ul>
     </div>
     <div class="logo-container">
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:300px;">
     </div>
     <div class="button-container">
-        <button onclick="downloadPDF()">Download All Participants Predictions</button>
+        <button onclick="downloadPDF()">All Predictions</button>
     </div>
 
     <script>
