--- a/predict.html
+++ b/predict.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./logos/favicon.png">
-    <title>Euro 2024 Schedule and Predictions</title>
+    <title>Euro2024 Predictions</title>
     <style>
         body {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -147,7 +147,7 @@
     <div class="logo-container">
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:300px;">
     </div>
-    <h1>Euro 2024 Schedule and Predictions</h1>
+    <h1>Euro2024 Predictions</h1>
     <div class="button-container">
         <button onclick="savePredictions()">Save & Finish Later</button>
         <button onclick="loadPredictions()">Load Saved Predictions</button>
