--- a/rankings.html
+++ b/rankings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./logos/favicon.png">
-    <title>Euro2024 - Rankings</title>
+    <title>Rankings</title>
     <style>
         body {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -98,7 +98,7 @@
             <li><a href="./pvp.html">Player vs Player</a></li>
             <li><a href="./dl_pdf.html">Download All Predictions</a></li>
             <li><a href="./predict.html">Prediction Form</a></li>
-            <li><a href="./rules.html">Points System</a></li>
+            <li><a href="./psys.html">Points System</a></li>
         </ul>
     </div>
     <div class="logo-container">
