--- a/pvp.html
+++ b/pvp.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./logos/favicon.png">
-    <title>Compare Participants Predictions</title>
+    <title>Player vs. Player</title>
     <style>
         body {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -115,13 +115,13 @@
             <li><a href="./pvp.html">Player vs Player</a></li>
             <li><a href="./dl_pdf.html">Download All Predictions</a></li>
             <li><a href="./predict.html">Prediction Form</a></li>
-            <li><a href="./rules.html">Points System</a></li>
+            <li><a href="./psys.html">Points System</a></li>
         </ul>
     </div>
     <div class="logo-container">
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:300px;">
     </div>
-    <h1>Compare Participants Predictions</h1>
+    <h1>Player vs. Player</h1>
     <div class="comparison-container">
         <div class="participant-container">
             <label for="participant1">Select Participant 1:</label>
