--- a/table_jpg.html
+++ b/table_jpg.html
@@ -116,7 +116,7 @@
             <li><a href="./pvp.html">Player vs Player</a></li>
             <li><a href="./dl_pdf.html">Download All Predictions</a></li>
             <li><a href="./predict.html">Prediction Form</a></li>
-            <li><a href="./rules.html">Points System</a></li>
+            <li><a href="./psys.html">Points System</a></li>
         </ul>
     </div>
     <div class="logo-container">
