--- a/update_scores.html
+++ b/update_scores.html
@@ -79,9 +79,9 @@
         <ul class="menu">
             <li><a href="./rankings.html">Rankings</a></li>
             <li><a href="./comp_euros.html">Euro2024 Results</a></li>
-            <li><a href="./dl_pdf.html">Game by Game Points</a></li>
+            <li><a href="./all_pred.html">Game by Game Points</a></li>
             <li><a href="./pvp.html">Player vs Player</a></li>
-            <li><a href="./dl_pdf.html">Download All Predictions</a></li>
+            <li><a href="./all_pred.html">Download All Predictions</a></li>
             <li><a href="./predict.html">Prediction Form</a></li>
             <li><a href="./psys.html">Points System</a></li>
         </ul>
