--- a/comp_euros.html
+++ b/comp_euros.html
@@ -130,7 +130,7 @@
             <li><a href="./pvp.html">Player vs Player</a></li>
             <li><a href="./all_pred.html">Download All Predictions</a></li>
             <li><a href="./predict.html">Prediction Form</a></li>
-            <li><a href="./psys.html">Points System</a></li>
+            <li><a href="./rules.html">Points System</a></li>
         </ul>
     </div>
     <div class="logo-container">
